step15/setup-prod/network-policy.yml
#
# 운영 용 네트워크 폴리시 설정
#

##
# 동일한 네임스페이스 외에서의 엑세스 금지
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-other-namespaces
  namespace: prod
spec:
  podSelector:
    matchLabels:        #  ← 모든 파드가 대상
  ingress:
  - from:
    - podSelector: {}
---
## 
# app: expose 라벨이 붙은 컨테이너를 공개
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: expose-external
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: expose
  ingress:
  - from: []
